[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Volume.gd" type="Script" id=1]
[ext_resource path="res://FundoJogo.png" type="Texture" id=2]
[ext_resource path="res://arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://bgm.ogg" type="AudioStream" id=4]
[ext_resource path="res://scripts/Tempo.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[node name="FundoDir" type="Control"]
anchor_right = 0.336
anchor_bottom = 1.0
margin_right = -22.896
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 181, 306 )
texture = ExtResource( 2 )

[node name="Result" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 51.0
margin_top = 25.0
margin_right = 190.672
margin_bottom = -234.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Você ainda pode selecionar mais blocos, pois a soma atual das multiplicidades < o número a ser removido!"
align = 3
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVolume" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 81.0
margin_top = 384.0
margin_right = 261.672
margin_bottom = -204.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Volume da Música:"
align = 3
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGMVolume" type="OptionButton" parent="."]
margin_left = 73.0
margin_top = 452.0
margin_right = 274.0
margin_bottom = 482.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGMStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="TimerResult" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
script = ExtResource( 5 )
nodos = [ "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody01", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody02", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody03", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody04", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody05", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody06", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody07", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody08", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody09", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody10", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody11", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody12", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody13", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody14", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody15", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody16", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody17", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody18", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody19", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody20", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody21", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody22", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody23", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody24", "/root/ViewportTriplo/CanvasLayer/GridContainer/ViewportContainer2/Viewport2/Jogo/RigidBody25" ]

[connection signal="item_selected" from="BGMVolume" to="." method="_on_BGMVolume_item_selected"]
[connection signal="timeout" from="TimerResult" to="TimerResult" method="_on_TimerResult_timeout"]
