[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Volume.gd" type="Script" id=1]
[ext_resource path="res://FundoJogo.png" type="Texture" id=2]
[ext_resource path="res://arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sfx/inicio jogo.ogg" type="AudioStream" id=4]
[ext_resource path="res://scripts/EmbaralharBlocos.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 3 )

[node name="FundoEsq" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -744.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 181, 306 )
texture = ExtResource( 2 )

[node name="Info" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 25.0
margin_right = 321.0
margin_bottom = -374.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Número de anéis a ser removido: 01



Fase 1

Pontuação: 000

Erros: 000"
align = 3
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVolume" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = 384.0
margin_right = 290.0
margin_bottom = -204.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Volume dos Efeitos Sonoros:"
align = 3
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVolume" type="OptionButton" parent="."]
margin_left = 73.0
margin_top = 452.0
margin_right = 274.0
margin_bottom = 482.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Embaralhar Blocos" type="Button" parent="."]
margin_left = 15.0
margin_top = 97.0
margin_right = 332.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 4 )
text = "Mudar Número de Anéis Requerido"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="SFXVolume" to="SFXVolume" method="_on_SFXVolume_item_selected"]
[connection signal="button_up" from="Embaralhar Blocos" to="Embaralhar Blocos" method="embaralhar_blocos"]
